# openai-structured

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  SECURITY.md  out.txt  output.json  output.txt  pyproject.toml  requirements-dev.txt  schema.json  test_client.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: docs.yml  publish.yml  python-package.yml  update-fallbacks.yml
docs/: requirements.txt  testing.md
docs/examples/tests/: conftest.py  test_basic_validation.py  test_custom_model.py  test_token_limits.py
docs/migration/: model_registry_migration.md
docs/source/: Makefile  api.rst  cli.rst  cli_quickstart.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  model_registry.rst  quickstart.rst  testing.rst
examples/: README.md  advanced_usage.py  basic_async.py  basic_call.py  basic_sync.py  basic_usage.py  cli_usage.py  error_handling.py  logging_example.py  streaming.py  streaming_example.py  validation.py
examples/use_cases/: README.md
examples/use_cases/01_code_review/: run.sh  schema.json  system_prompt.txt  task.j2
examples/use_cases/01_code_review/sample_input/: demo1.py  demo2.py
scripts/: update_fallbacks.py
src/openai_structured/: __init__.py  buffer.py  cli.py  client.py  errors.py  logging.py  model_registry.py  model_version.py
src/openai_structured/cli/: __init__.py  cache_manager.py  cli.py  errors.py  file_utils.py  progress.py  security.py  security_types.py  template_env.py  template_extensions.py  template_filters.py  template_io.py  template_rendering.py  template_schema.py  template_utils.py  template_validation.py
src/openai_structured/config/: models.yml  parameter_constraints.yml
src/openai_structured/examples/: __init__.py
src/openai_structured/examples/schemas/: __init__.py
src/openai_structured/scripts/: update_registry.py
src/openai_structured/testing/: __init__.py  error_helpers.py  response_helpers.py  stream_helpers.py
src/openai_structured/testing/templates/: temp_test_constraints.yml  temp_test_models.yml  test_constraints.yml  test_models.yml
tests/: conftest.py  models.py  test_buffer.py  test_cache_manager.py  test_cli.py  test_cli_errors.py  test_cli_integration.py  test_cli_validation.py  test_client.py  test_client_type.py  test_error_messages.py  test_errors.py  test_examples.py  test_file_list.py  test_file_utils.py  test_live.py  test_model_registry.py  test_model_registry_integration.py  test_progress.py  test_response.py  test_security.py  test_streaming.py  test_system_prompts.py  test_template_io.py  test_template_rendering.py  test_template_schema.py  test_template_utils.py  test_template_validation.py  test_testing.py  test_testing_utils.py  test_tokens.py  test_validation.py
tests/live_config/: models.yml  parameter_constraints.yml
tests/support/: __init__.py
